numbat/tests/snapshots/prelude_and_examples__typecheck_error_snapshots@unknown_identifier.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/typecheck_error/unknown_identifier.nbt
---
error: while type checking
  ┌─ <internal:3>:1:13
  │
1 │ 2 meter + 3 sceond
  │             ^^^^^^ unknown identifier
  │
  = Did you mean 'second'?
